Fix bug with images not being scaled properly if they are too large for kiosk screen

--- a/kiosk/static/kiosk/kiosk.css
+++ b/kiosk/static/kiosk/kiosk.css
@@ -10,7 +10,11 @@ html, body {
 }
 
 .dummy {
+	background-color: black;
 	position:absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center; 
 	top: 0;
 	left: 0;
 	right: 0;
